Fix text button issue in keyboard on mobile

--- a/src/Keyboard.css
+++ b/src/Keyboard.css
@@ -27,6 +27,7 @@
   transform: translate(-50%, 0);
   width: fit-content;
   padding: 0px 20px;
+  white-space: nowrap;
 }
 
 @media (max-width: 400px) {
